# brainstem-project

./: .gitattributes  .gitignore  CMakeLists.txt  config.ini  config.json  main.py  package.json  requirements.txt
cli/: README.md
config/: main.py
data/parent/: 70_edge_voxels.csv  DEN[-1.0]_at85percent.csv  NewIntC.csv  NonGeneColumns.csv  PCA.csv  [4K]_DenCor_NaN.csv  [644]_DenCor_0.001.csv  output_K1.csv  output_K[0.01].csv  wakeup_NewDenC.csv
data/shared/: [70_edge_voxel]_clustered.csv  [85_percent_active_nAn=0]_clustered.csv  [Actb-74881516]_clustered.csv  [Chat-252]_clustered.csv
drivers/: data_generator.py  main.py
drivers/clustering/: clusterer.py  kmeans.py  main.py  pca.py
drivers/data/: main.py
drivers/quantitative/: main.py
drivers/visualization/: main.py  matplotlib.py  matplotlib_viz.py  plotly.py  visualizer.py
include/: api.h
include/http/: http.h
internal/http/: CMakeLists.txt
lib/amba/: CMakeLists.txt
lib/amba/include/: AmbaClientInterface.h  AmbaClientV1.h  amba_client.h  amba_client_interface.h  amba_client_v1.h
lib/amba/src/: AmbaClientInterface.cpp  AmbaClientV1.cpp  amba_client.cpp
lib/domain/: CMakeLists.txt
lib/ml/: CMakeLists.txt
providers/: config.py  data.py
providers/data/: main.py
providers/data_suite/: data_generator.py  data_saver.py
src/: CMakeLists.txt  main.cpp
storage/: All_Clusters_K13.csv
util/: README.md  brainscan.py  cache.py  colors.py  constants.py  conversion.py  data.py  directory_cache.py  input.py  print.py  string_util.py
workspace/: pca.py  voxel_freq.py
(+23 files in other folders)
